исправления сгененерированного опенапи кода
